_deploy/k8s/frontend/dev.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gw-web-api-svc-dev-adm
  namespace: frontend
spec:
  type: NodePort
  ports:
  - port: 8001
    targetPort: 8001
    nodePort: 30106
  selector:
    app: gw-web-api
