_deploy/k8s/frontend/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
